--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ ext {
     annotationApi           = "1.3.2"
     lombok                  = "1.18.24"
     jackson                 = "2.13.3"
-    swaggerVersion          = '2.2.0'
+    swaggerVersion          = "2.2.0"
     micronautOpenApiVersion = "4.2.0"
 }
 
