--- a/build.gradle
+++ b/build.gradle
@@ -51,10 +51,13 @@ dependencies {
     implementation          "io.swagger.core.v3:swagger-annotations:${swaggerVersion}"
     implementation          "io.micronaut.openapi:micronaut-openapi:${micronautOpenApiVersion}"
 
+    // html rendering engine
+    implementation          "io.micronaut.views:micronaut-views-freemarker"
+
     // testing
-   testImplementation       "org.codehaus.groovy:groovy:3.0.11"
-   testImplementation       "org.spockframework:spock-core:2.1-groovy-3.0"
-   testImplementation       "io.micronaut.test:micronaut-test-spock"
+    testImplementation      "org.codehaus.groovy:groovy:3.0.11"
+    testImplementation      "org.spockframework:spock-core:2.1-groovy-3.0"
+    testImplementation      "io.micronaut.test:micronaut-test-spock"
 }
 
 application {
